# automerge-swift

./: .gitignore  .mailmap  .spi.yml  .swiftformat  CONTRIBUTING.md  LICENSE  Package.swift  README.md  test-docc-script.bash
.github/workflows/: ci.yaml
.swiftpm/: Automerge.xctestplan
Automerge.docc/: AddressBookExample.md  Extension.md
AutomergeUniffi/: automerge.swift  automergeFFI.h
CollectionBenchmarks/: .gitignore  Library.json  Package.swift  README.md  baseline.bash
CollectionBenchmarks/Baselines/: Results.md  results.json
CollectionBenchmarks/scripts/: compare-current.bash  update-baseline.bash
Sources/Automerge/: AMValueRepresentable.swift  ActorId.swift  Change.swift  ChangeHash.swift  Counter.swift  Cursor.swift  Document+walk.swift  (+28 more)
docs/: diagnostics.json  indexing-records.json  linkable-entities.json  metadata.json
notes/: AutomergeShareplayIntegration.md  BlocksAPIFeedback.md  CloudKitIntegration.md  EncodingAttributedStringsIntoMarks.md  WebAssembly.md  automerge-codable.md  prerelease-branch.md  project-layers.md  project-layout.afdesign  release-process.md  rust-dev.md
rust/: .gitignore  Cargo.toml  build.rs
rust/src/: actor_id.rs  automerge.udl  block.rs  change.rs  change_hash.rs  changeset.rs  cursor.rs  doc.rs  lib.rs  mark.rs  obj_id.rs  obj_type.rs  patches.rs  path.rs  scalar_value.rs  span.rs  sync_state.rs  text_encoding.rs  value.rs
rust/src/patches/: observer.rs  sequence_tree.rs
scripts/: build-ghpages-docs.sh  build-xcframework.sh  compress-framework.sh  docc-symbols.bash  preview-docs.sh  sign-compress-framework.sh
(+1091 files in other folders)
