[package]
name = "uniffi_automerge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "uniffi_automerge"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi/cli"]

[dependencies]
# automerge = "0.5.11"
automerge = { git = "https://github.com/automerge/automerge", branch = "op_set2" }
thiserror = "1.0.38"
uniffi = "0.27.1"

[build-dependencies]
uniffi = {version = "0.27.1", features = ["build"] }

