[package]
name = "uniffi_automerge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]
name = "uniffi_automerge"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi/cli"]

[dependencies]
automerge = { version = "0.6.0", default-features = false, features = ["wasm"] }
thiserror = "1.0.38"
uniffi = "0.28.2"

[build-dependencies]
uniffi = { version = "0.28.2", features = ["build"] }
